--- a/ordinal.ipynb
+++ b/ordinal.ipynb
@@ -852,6 +852,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generalized linear regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find a correlation between the categorical outcome $Y$ and some predictor variable $X$.\n",
+    "A common application of logistic regression is to find the relationship between the outcomes of $Y$ and some continuous predictor variable $X$. For example, $Y$ could represent different stages of a disease and $X$ a biomarker whose levels correlate with the diseases; in that case, we would want to determine the stage of the disease in the patient given their biomarkers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create some data based on the numpyro example for sanity checking. We can generate categorical data using the `Categorical` class in numpro; this will produce categorical draws for a number of bins, with probabilities specified by either a `probs` argument or a `logits` argument, which should be vectors with the same length as the number of bins. Recall that the logit is just an equivalent way of specifying the probability $p$, and it's given by\n",
     "$$\n",
     "l \\equiv {\\rm logit}(p) = \\ln\\left(\\frac{p}{1-p}\\right) ;\n",
@@ -1006,13 +1021,6 @@
     "mcmc = MCMC(kernel, num_warmup=250, num_samples=750)\n",
     "mcmc.run(mcmc_key, X, Y, n_bins)\n",
     "mcmc.print_summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A common application of logistic regression is to find the relationship between the outcomes of $Y$ and some continuous predictor variable $X$. For example, $Y$ could represent different stages of a disease and $X$ a biomarker whose levels correlate with the diseases; in that case, we would want to determine the stage of the disease in the patient given their biomarkers."
    ]
   },
   {
