fixed bug in anonymized data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Judge-1</td>\n",
+       "      <td>Judge-0</td>\n",
        "      <td>Imp.  Field</td>\n",
        "      <td>6</td>\n",
        "      <td>8</td>\n",
@@ -173,7 +173,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Judge-2</td>\n",
+       "      <td>Judge-0</td>\n",
        "      <td>Clarity</td>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
@@ -197,7 +197,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Judge-3</td>\n",
+       "      <td>Judge-0</td>\n",
        "      <td>Confidence</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -221,7 +221,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Judge-4</td>\n",
+       "      <td>Judge-1</td>\n",
        "      <td>Orig/ Creat.</td>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
@@ -251,10 +251,10 @@
       "text/plain": [
        "     Judge      Category  Candidate-0  Candidate-1  Candidate-2  Candidate-3  \\\n",
        "0  Judge-0  Orig/ Creat.            6            7            9            9   \n",
-       "1  Judge-1   Imp.  Field            6            8            9            9   \n",
-       "2  Judge-2       Clarity            6            7            9            9   \n",
-       "3  Judge-3    Confidence            3            3            1            1   \n",
-       "4  Judge-4  Orig/ Creat.            6            7            9            8   \n",
+       "1  Judge-0   Imp.  Field            6            8            9            9   \n",
+       "2  Judge-0       Clarity            6            7            9            9   \n",
+       "3  Judge-0    Confidence            3            3            1            1   \n",
+       "4  Judge-1  Orig/ Creat.            6            7            9            8   \n",
        "\n",
        "   Candidate-4  Candidate-5  Candidate-6  Candidate-7  ...  Candidate-28  \\\n",
        "0            7            8            8            7  ...             7   \n",
@@ -280,7 +280,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,19 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "Y = jnp.array(data[data['Category'] == 'Orig/ Creat.']['Candidate-0'].values)\n",
     "\n",
     "n_bins = 10\n",
-    "n_resp = sum(scores)"
+    "n_resp = len(data['Judge'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -312,69 +312,13 @@
        "9"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      Judge-0\n",
-       "1      Judge-1\n",
-       "2      Judge-2\n",
-       "3      Judge-3\n",
-       "4      Judge-4\n",
-       "5      Judge-5\n",
-       "6      Judge-6\n",
-       "7      Judge-7\n",
-       "8      Judge-8\n",
-       "9      Judge-9\n",
-       "10    Judge-10\n",
-       "11    Judge-11\n",
-       "12    Judge-12\n",
-       "13    Judge-13\n",
-       "14    Judge-14\n",
-       "15    Judge-15\n",
-       "16    Judge-16\n",
-       "17    Judge-17\n",
-       "18    Judge-18\n",
-       "19    Judge-19\n",
-       "20    Judge-20\n",
-       "21    Judge-21\n",
-       "22    Judge-22\n",
-       "23    Judge-23\n",
-       "24    Judge-24\n",
-       "25    Judge-25\n",
-       "26    Judge-26\n",
-       "27    Judge-27\n",
-       "28    Judge-28\n",
-       "29    Judge-29\n",
-       "30    Judge-30\n",
-       "31    Judge-31\n",
-       "32    Judge-32\n",
-       "33    Judge-33\n",
-       "34    Judge-34\n",
-       "35    Judge-35\n",
-       "Name: Judge, dtype: object"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['Judge']"
+    "n_resp"
    ]
   },
   {
