--- a/gaussian_analysis.ipynb
+++ b/gaussian_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,22 +60,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ordinal regression"
+    "# Gaussian regression"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# load anonimized data\n",
-    "data = pd.read_csv('ranking_data_anon.csv')"
+    "We are provided with a set of scores for each candidate, issued by a number of judges over different categories (Originality/Creativity, Importance to the Field, Clarity) with certain confidence. In this simplified model, we will imagine that each judge has actually reported a Gaussian PDF representing a measurement of the true score (plus some bias), with mean given by the reported score and variance inversely proportional to the confidence.\n",
+    "\n",
+    "For a given category (say, Clarity), let the score reported for candidate $i$ by judge $j$ be $x_{ij}$ and the uncertainty $\\sigma_{ij} \\propto {\\rm confidence}$. Then, the posterior for the true score $\\mu$ of this candidate is, assuming the judges are independent,\n",
+    "$$\n",
+    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_j) = \\prod_j p(\\mu_i \\mid x_{ij}, \\sigma_{ij}) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) \\, p(\\mu_i)\n",
+    "$$\n",
+    "By the Gaussian assumption, let's assume the score of an individual judge is drawn such that \n",
+    "$$\n",
+    "p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) = \\mathcal{N}(\\mu_i, \\sigma_{ij})[x_{ij}]\n",
+    "$$\n",
+    "Once we specify a prior for the true score $p(\\mu_i)$ we are done with this simple model where there is no judge bias. A simple prior could be a uniform distribution, or a Gaussian with mean $\\Mu$ and standard deviation $\\Sigma$,\n",
+    "$$\n",
+    "p(\\mu_i) = \\mathcal{N}(\\Mu, \\Sigma)[\\mu_i] \\, .\n",
+    "$$\n",
+    "\n",
+    "Now, we could also take a look at all candidates simultaneously and consider the possibility that the judges are biased by some amount $\\beta_j$. Assume a prior on $\\beta_j \\sim \\mathcal{N}(0, \\Beta)$\n",
+    "$$\n",
+    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_{j}, \\Beta) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}, \\Beta) \\, p(\\mu_i)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the ranking data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +302,14 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load anonimized data\n",
+    "data = pd.read_csv('ranking_data_anon.csv')\n",
     "data.iloc[:5]"
    ]
   },
