--- a/gaussian_analysis_joint_category.ipynb
+++ b/gaussian_analysis_joint_category.ipynb
@@ -1,8 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gaussian regression of candidate scores: correlated categories."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will set up a Gaussian regression model as in the `gaussian_analysis_single_category.ipynb` notebook, but we will now enhance it with a generative model for the scores that allows for intrinsic correlations in the true scores of a candidate over the three score categories (`Originality/Creativity`, `Importance to the Field`, `Clarity`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We imagine the true scores are drawn from a 3x3 multivariate Gaussian normal with covariance $\\Sigma$, such that \n",
+    "$$\n",
+    "\\mu_i \\sim \\mathcal{N}(\\Mu, \\Sigma)\n",
+    "$$\n",
+    "We will set a broad Gaussian prior on $\\Mu \\sim \\mathcal{N}(5, 5)$, based on the fact that the scores are produced on a scale from 1-10. For $\\Sigma$, we will use an LKJ prior."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,32 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gaussian regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are provided with a set of scores for each candidate, issued by a number of judges over different categories (Originality/Creativity, Importance to the Field, Clarity) with certain confidence. In this simplified model, we will imagine that each judge has actually reported a Gaussian PDF representing a measurement of the true score (plus some bias), with mean given by the reported score and variance inversely proportional to the confidence.\n",
-    "\n",
-    "For a given category (say, Clarity), let the score reported for candidate $i$ by judge $j$ be $x_{ij}$ and the uncertainty $\\sigma_{ij} \\propto {\\rm confidence}$. Then, the posterior for the true score $\\mu$ of this candidate is, assuming the judges are independent,\n",
-    "$$\n",
-    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_j) = \\prod_j p(\\mu_i \\mid x_{ij}, \\sigma_{ij}) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) \\, p(\\mu_i)\n",
-    "$$\n",
-    "By the Gaussian assumption, let's assume the score of an individual judge is drawn such that \n",
-    "$$\n",
-    "p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) = \\mathcal{N}(\\mu_i, \\sigma_{ij})[x_{ij}]\n",
-    "$$\n",
-    "Once we specify a prior for the true score $p(\\mu_i)$ we are done with this simple model where there is no judge bias. A simple prior could be a uniform distribution, or a Gaussian with mean $\\Mu$ and standard deviation $\\Sigma$,\n",
-    "$$\n",
-    "p(\\mu_i) = \\mathcal{N}(\\Mu, \\Sigma)[\\mu_i] \\, .\n",
-    "$$\n",
-    "\n",
-    "Now, we could also take a look at all candidates simultaneously and consider the possibility that the judges are biased by some amount $\\beta_j$. Assume a prior on $\\beta_j \\sim \\mathcal{N}(0, \\Beta)$\n",
-    "$$\n",
-    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_{j}, \\Beta) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}, \\Beta) \\, p(\\mu_i)\n",
-    "$$"
+    "## Data setup"
    ]
   },
   {
