--- a/gaussian_analysis_single_category.ipynb
+++ b/gaussian_analysis_single_category.ipynb
@@ -1,8 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gaussian regression of candidate scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will set up a Gaussian regression model to infer the true ranking of a number of candidates based on the set of scores issued by a set of judges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are provided with a set of scores for each candidate, issued by a number of judges over different categories (`Originality/Creativity`, `Importance to the Field`, `Clarity`) with certain confidence (`Confidence`). In this simplified model, we will imagine that each judge has actually reported a Gaussian PDF representing a measurement of the true score (plus some bias), with mean given by the reported score and variance inversely proportional to the confidence.\n",
+    "\n",
+    "For a given category (say, `Clarity`), let the score reported for candidate $i$ by judge $j$ be $x_{ij}$ and the uncertainty $\\sigma_{ij} \\propto {\\rm confidence}$, where `Confidence` was reported as a number from 1-3 corresponding to _decreasing_ confidence. Then, the posterior for the true score $\\mu$ of this candidate is, assuming the judges are independent,\n",
+    "$$\n",
+    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_j) = \\prod_j p(\\mu_i \\mid x_{ij}, \\sigma_{ij}) \\propto p(\\mu_i) \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) \n",
+    "$$\n",
+    "By the Gaussian assumption, let's assume the score of an individual judge is drawn such that \n",
+    "$$\n",
+    "p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) = \\mathcal{N}(\\mu_i, \\sigma_{ij})[x_{ij}]\n",
+    "$$\n",
+    "Once we specify a prior for the true score $p(\\mu_i)$ we are done with this simple model where there is no judge bias. \n",
+    "\n",
+    "Now, we could also take a look at all candidates simultaneously and consider the possibility that the judges are biased by some unknown amount $\\beta_j$. The joint posterior on $\\mu_i$ and $\\beta_j$ is\n",
+    "$$\n",
+    "p(\\mu_i, \\beta_j \\mid \\{x_{ij}, \\sigma_{ij} \\}_{j}) \\propto p(\\mu_i, \\beta_j)\\, p( \\{ x_{ij} \\} \\mid \\mu_i, \\beta_j, \\left\\{ \\sigma_{ij}\\right\\}) = \n",
+    " p(\\mu_i) \\prod_{j} p(\\beta_j)\\, \\mathcal{N}(\\mu_i + \\beta_j, \\sigma_{ij})[ x_{ij} ]\n",
+    "$$\n",
+    "assuming separable priors for $\\mu_i$ and $\\beta_j$. If we set a Gaussian prior on $\\beta_j$, then that quantity can be easily marginalized out analytically."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +74,9 @@
     "numpyro.set_platform('cpu')\n",
     "\n",
     "from jax import numpy as jnp, random\n",
-    "from numpyro import sample, handlers\n",
+    "from numpyro import sample\n",
     "import numpyro.distributions as dist\n",
-    "from numpyro.distributions import (\n",
-    "    Categorical,\n",
-    "    Dirichlet,\n",
-    "    ImproperUniform,\n",
-    "    Normal,\n",
-    "    OrderedLogistic,\n",
-    "    TransformedDistribution,\n",
-    "    constraints,\n",
-    "    transforms,\n",
-    ")\n",
     "from numpyro.infer import MCMC, NUTS\n",
-    "from numpyro.infer.reparam import TransformReparam\n",
     "\n",
     "# set plotting context\n",
     "sns.set_context('notebook')\n",
@@ -60,32 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gaussian regression"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are provided with a set of scores for each candidate, issued by a number of judges over different categories (Originality/Creativity, Importance to the Field, Clarity) with certain confidence. In this simplified model, we will imagine that each judge has actually reported a Gaussian PDF representing a measurement of the true score (plus some bias), with mean given by the reported score and variance inversely proportional to the confidence.\n",
-    "\n",
-    "For a given category (say, Clarity), let the score reported for candidate $i$ by judge $j$ be $x_{ij}$ and the uncertainty $\\sigma_{ij} \\propto {\\rm confidence}$. Then, the posterior for the true score $\\mu$ of this candidate is, assuming the judges are independent,\n",
-    "$$\n",
-    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_j) = \\prod_j p(\\mu_i \\mid x_{ij}, \\sigma_{ij}) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) \\, p(\\mu_i)\n",
-    "$$\n",
-    "By the Gaussian assumption, let's assume the score of an individual judge is drawn such that \n",
-    "$$\n",
-    "p(x_{ij} \\mid \\mu_i, \\sigma_{ij}) = \\mathcal{N}(\\mu_i, \\sigma_{ij})[x_{ij}]\n",
-    "$$\n",
-    "Once we specify a prior for the true score $p(\\mu_i)$ we are done with this simple model where there is no judge bias. A simple prior could be a uniform distribution, or a Gaussian with mean $\\Mu$ and standard deviation $\\Sigma$,\n",
-    "$$\n",
-    "p(\\mu_i) = \\mathcal{N}(\\Mu, \\Sigma)[\\mu_i] \\, .\n",
-    "$$\n",
-    "\n",
-    "Now, we could also take a look at all candidates simultaneously and consider the possibility that the judges are biased by some amount $\\beta_j$. Assume a prior on $\\beta_j \\sim \\mathcal{N}(0, \\Beta)$\n",
-    "$$\n",
-    "p(\\mu_i \\mid \\{x_{ij}, \\sigma_{ij} \\}_{j}, \\Beta) \\propto \\prod_j p(x_{ij} \\mid \\mu_i, \\sigma_{ij}, \\Beta) \\, p(\\mu_i)\n",
-    "$$"
+    "## Data setup"
    ]
   },
   {
@@ -433,9 +435,9 @@
    "source": [
     "def model(x=None, sigma=sigma):\n",
     "    n_categories, n_judges, n_candidates = x.shape\n",
-    "    mu = sample('mu', Normal(5, 5), sample_shape=(n_categories, 1, n_candidates,))\n",
-    "    beta = sample('beta', Normal(0, 2), sample_shape=(1,n_judges,1))\n",
-    "    x = sample('x', Normal(mu + beta, sigma), obs=x)\n",
+    "    mu = sample('mu', dist.Normal(5, 5), sample_shape=(n_categories, 1, n_candidates,))\n",
+    "    beta = sample('beta', dist.Normal(0, 2), sample_shape=(1,n_judges,1))\n",
+    "    x = sample('x', dist.Normal(mu + beta, sigma), obs=x)\n",
     "\n",
     "key = random.PRNGKey(1234)\n",
     "mcmc_key, pred_key = random.split(key)\n",
@@ -476,15 +478,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = result.posterior.stack(sample=('chain', 'draw'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "samples = result.posterior.stack(sample=('chain', 'draw'))\n",
+    "\n",
     "mu = np.squeeze(samples.mu.values)\n",
     "beta = np.squeeze(samples.beta.values)"
    ]
@@ -585,14 +580,6 @@
     }
    ],
    "source": [
-    "# fraction_above_median = np.apply_along_axis(lambda y: len(y[y > median_total_score])/len(y), 1, score_sum)\n",
-    "# [c for q,c in sorted(zip(fraction_above_median, candidates), reverse=True)][:6]\n",
-    "\n",
-    "# plt.figure(figsize=(15, 5))\n",
-    "# plt.plot(candidates, fraction_above_median, 'o-')\n",
-    "# plt.ylabel(\"Fraction of total score above global median\")\n",
-    "# plt.xticks(rotation=45);\n",
-    "\n",
     "total_lower_limit = np.apply_along_axis(lambda y: np.quantile(y, 0.05), 1, score_sum)\n",
     "ranked_candidates = pd.Series(total_lower_limit, index=candidates).sort_values(ascending=False)\n",
     "print(list(ranked_candidates.index.values)[:6])\n",
